--- a/views/home.pug
+++ b/views/home.pug
@@ -5,26 +5,39 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name='csrf', content=_csrf)
     title Cuisine - #{title}
-    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css', integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO', crossorigin='anonymous')
+    link(rel='icon' href="/favicon.ico")
+    //- link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css', integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO', crossorigin='anonymous')
     script(src='https://code.jquery.com/jquery-3.3.1.min.js', integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=', crossorigin='anonymous')
   body
-    .header
-      div Cuisine
-      .header-right
-        img#volume
-        span#join Join Now!
-    .content
-      .video-bg
-        video(autoplay, muted, loop) Video is not supported by your browser, please use Chrome to open the page.
-      .sign-up
+    .pc
+      .header
+        div Cuisine
+        .header-right
+          img#volume
+          span#join Join Now!
+      div
+        .video-bg
+          video(autoplay, muted, loop) Video is not supported by your browser, please use Chrome to open the page.
+        .sign-up
+          .form-group
+            label Email
+            input.form-control(type='email')
+          .form-group
+            label Password
+            input.form-control(type='password')
+          .btnContainer
+            button Enter
+    .mobile
+      .pic-bg
+      .content
+        .title Cuisine
         .form-group
           label Email
           input.form-control(type='email')
         .form-group
           label Password
           input.form-control(type='password')
-        button.btn.btn-primary Enter
-    
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49', crossorigin='anonymous')
-    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js', integrity='sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy', crossorigin='anonymous')  
+        .btn Enter
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49', crossorigin='anonymous')
+    //- script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js', integrity='sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy', crossorigin='anonymous')  
     script(src=jsPath)
