--- a/public/home/style.less
+++ b/public/home/style.less
@@ -6,53 +6,116 @@ body {
   box-sizing: border-box;
 }
 
-.video-bg {
-  width: 100%;
-  height: 100%;
-  video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    min-width: 1200px;
-  }
-}
-
-.sign-up {
+.pc {
   display: none;
-  position: absolute;
-  width: 30%;
-  min-width: 400px;
-  right: 2px;
-  top: 42px;
-  background-color: #fff;
-  opacity: 0.9;
-  padding: 30px;
-  border-radius: 10px;
-}
-
-.header {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px 10px;
-  height: 40px;
-  width: 100%;
-  min-width: 1200px;
-  background-color: #fff;
-  opacity: 0.3;
-  z-index: 10;
-  .header-right {
+  .header {
+    position: absolute;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 200px;
-    img {
-      width: 16px;
-      cursor: pointer;
+    padding: 5px 10px;
+    height: 40px;
+    width: 100%;
+    background-color: #fff;
+    opacity: 0.3;
+    z-index: 10;
+    .header-right {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 200px;
+      img {
+        width: 16px;
+        cursor: pointer;
+      }
+      span {
+        cursor: pointer;
+      }
     }
-    span {
-      cursor: pointer;
+  }
+  .sign-up {
+    display: none;
+    position: absolute;
+    width: 30%;
+    min-width: 400px;
+    right: 2px;
+    top: 42px;
+    background-color: #fff;
+    opacity: 0.9;
+    padding: 30px;
+    border-radius: 10px;
+    .btnContainer {
+      display: flex;
+      justify-content: flex-end;
+      > button {
+        width: 80px;
+        height: 30px;
+      }
     }
+  }
+  .video-bg {
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      min-width: 1200px;
+    }
+  }
+}
+
+.mobile {
+  display: none;
+  position: relative;
+  .pic-bg {
+    height: 100vh;
+    background-image: url("https://wyh-open.s3-ap-southeast-2.amazonaws.com/mobile-bg.jpeg");
+    background-position: center;
+    background-size: cover;
+    filter: blur(4px);
+  }
+  .content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 5vh 10px 10px 10px;
+  }
+  .title {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 25vh;
+  }
+  .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    max-width: 100px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 40vh;
+    box-shadow: 2px 2px 1px #e5e5e5;
+    transition: transform 0.1s linear;
+    &:active {
+      transform: translate(5px, 5px);
+    }
+  }
+}
+
+.form-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  > label {
+    flex-basis: 30%;
+  }
+  > input {
+    flex: 1;
+    outline: none;
+    border: 1px solid #e5e5e5;
+    font-size: 20px;
+    padding-left: 5px;
   }
 }
